fixed alignment in submit-enquiry

--- a/src/app/ui-components/submit-enquiry-form/submit-enquiry-form/submit-enquiry-form.component.scss
+++ b/src/app/ui-components/submit-enquiry-form/submit-enquiry-form/submit-enquiry-form.component.scss
@@ -24,7 +24,8 @@
         width: 100%;
     }
     .suburb{
-        margin-right: 138px;
+        width: calc(55% + 29px);
+        display: inline-flex;
     }
     #suburb{
         width: 55%;
@@ -99,7 +100,7 @@
     border: 0.5px solid rgb(93, 90, 90, 0.5);
     padding: 15px;
     position: fixed;
-    top: 50px;
+    top: calc(50% - 125px);
     left: 5%;
     box-shadow: 1px 1px 1px 1px rgb(153, 149, 149);
     z-index: 100;
